--- a/PortfolioWebAssem/Pages/MusicQuizPage/MusicQuizPage_Quiz.razor
+++ b/PortfolioWebAssem/Pages/MusicQuizPage/MusicQuizPage_Quiz.razor
@@ -3,37 +3,44 @@
 <h1 class="text-center">Music Quiz MAIN</h1>
 
 
-<div>
-	<div class="m-5">
-		<label>@currentLyrics</label>
-	</div>
-	<div class="m-5">
-		<button @onclick="revealWord" class="btn btn-primary" style=" visibility: @showingAllLyrics">Reveal next word</button>
 
-	</div>
-	<div class="m-5">
-		<input @bind="userInput" />
-		<button @onclick="checkAnswer">Submit</button>
-	</div>
+<div class="d-flex justify-content-center m-5">
+	<label>@currentLyrics</label>
+</div>
+
+<div class="d-flex justify-content-center m-5">
+	<button @onclick="revealWord" class="btn btn-primary" style=" visibility: @showingAllLyrics">Reveal next word</button>
+</div>
+
+<div class="d-flex justify-content-center m-5">
+	<input @bind="userInput"/>
+	<button @onclick="checkAnswer">Submit</button>
 </div>
 
 
-@code {
+@code 
+{
 	int score = 0;
+	string CurrentSong = "";
 	int currentSongNumber = 0;
-	string currentLyrics = "";
+	string currentLyrics =  " ";
 	int numberOfLyricsDisplaying = 0;
 	string showingAllLyrics = "visible";
 	string userInput = "";
 
 	[Parameter]
-	public List<string> AllLyrics { get; set; }
-	[Parameter]
-	public string CurrentSong { get; set; }
+	public List<List<string>> AllLyrics { get; set; }
 
+	private string chooseSentence()
+	{
+		Random rand = new();
+		int index = rand.Next(0, AllLyrics.Count());
+		return AllLyrics[currentSongNumber][index];
+	}
+	//TODO fix button moving when first word appears
 	private void revealWord()
 	{
-		currentLyrics += AllLyrics[numberOfLyricsDisplaying] + " ";
+		currentLyrics += AllLyrics[currentSongNumber][numberOfLyricsDisplaying] + " ";
 		numberOfLyricsDisplaying++;
 
 		if (numberOfLyricsDisplaying >= AllLyrics.Count)
