--- a/PortfolioWebAssem/Pages/MusicQuizPage/ArtistList.razor
+++ b/PortfolioWebAssem/Pages/MusicQuizPage/ArtistList.razor
@@ -5,33 +5,90 @@
 @inject HttpClient httpClient;
 
 
-
-<br />
 <div class="container-fluid">
 	<div class="row">
-		@*blank column to center mid column. find a way to shrink this as column 3 expands*@
-		<div class="col-3 d-flex justify-content-center">
-			<div class="text-center">
-				<span>Search by:</span>
-				<div class="text-left">
-					<div class="d-flex justify-content-start">
-						<input type="radio" id="artist" checked="@(artistSearchSetting == "searchByArtist")" name="searchSetting" @onchange="@(() => {artistSearchSetting="searchByArtist"; artistSearchPromptString = "Search for an artist to begin fetching song snippets"; resetArtistListComponent();})">
-						@* <input type="radio" id="artist" name="searchSetting" @bind="artistSearchSetting"> *@
-						<label class="mx-1" for="artist">Artist</label>
-					</div>
-					<div class="d-flex justify-content-start">
-						<input type="radio" id="songTitle" checked="@(artistSearchSetting == "searchBySongTitle")" name="searchSetting" @onchange="@(() => {artistSearchSetting="searchBySongTitle"; artistSearchPromptString = "Search for a song title to begin fetching song snippets from that artist"; resetArtistListComponent();})">
-						@* <input type="radio" id="songTitle" name="searchSetting" @bind="artistSearchSetting"> *@
-						<label class="mx-1" for="songTitle">Song title</label>
+
+		@*---------------LEFT COLUMN---------------*@
+		<div class="col-3 d-flex flex-column align-items-center">
+
+			@*----------SEARCH BY----------*@
+			<div class="d-block text-center">
+
+				<span>Search for artist by:</span>
+				<div class="container" style="">
+					<div class="row vertical-align"  >
+						<div>
+							<input class="" type="radio" id="artist" checked="@(artistSearchSetting == "searchByArtist")" name="searchSetting" @onchange="@(() => {artistSearchSetting="searchByArtist"; artistSearchPromptString = "Search for an artist to begin fetching song snippets"; resetArtistListComponent();})">
+							<label class="mx-1" for="artist">Artist name</label>
+						</div>
+						<div>
+							<input type="radio" id="songTitle" checked="@(artistSearchSetting == "searchBySongTitle")" name="searchSetting" @onchange="@(() => {artistSearchSetting="searchBySongTitle"; artistSearchPromptString = "Search for a song title to begin fetching song snippets from that artist"; resetArtistListComponent(); startQuizButtonVisibility="hidden";})">
+							<label class="mx-1" for="songTitle">Song title</label>
+						</div>
 					</div>
 				</div>
 			</div>
+
+			@*----------SLIDERS----------*@
+			<div class="d-block text-center my-3">
+
+				<div style="margin: 5px 0;">
+					<span>Number of songs to fetch: </span>
+					<div style="margin: 5px 0;" class="slidecontainer">
+						<input type="range" min="1" max="50" @bind="numberOfSongsToFetch" class="slider">
+						<span style="position:absolute; margin-left:10px">@numberOfSongsToFetch</span>
+					</div>
+
+					<span>Number of songs to play: </span>
+					<div style="margin: 5px 0;" class="slidecontainer">
+						@if (numberOfSongsToFetch < numberOfSongsSelected)
+							{
+								numberOfSongsSelected = numberOfSongsToFetch;
+							}
+						<input type="range" min="1" max="@numberOfSongsToFetch" @bind="numberOfSongsSelected" class="slider">
+						<span style="position:absolute; margin-left:10px">@numberOfSongsSelected</span>
+					</div>
+				</div>
+			</div>
+
+			<style>
+				.form-switch label{
+					display: inline-block;
+					width: 220px;
+				}
+			</style>
+			@*----------SETTINGS----------*@
+			<div class="d-block justify-content-center">
+
+				<div class="form-check form-switch ">
+					<input class="form-check-input mx-2" type="checkbox" id="startOnly" @bind=@Settings["startOnly"]>
+					<label class="form-check-label" for="startOnly">Starting lines only</label>
+				</div>
+				<div class="form-check form-switch ">
+					<input class="form-check-input mx-2" type="checkbox" id="repeatsCheck" @bind=@Settings["repeatsOnly"]>
+					<label class="form-check-label" for="repeatsCheck">Most repeated lines only</label>
+				</div>
+				<div class="form-check form-switch ">
+					<input class="form-check-input mx-2" type="checkbox" id="genericsCheck" @bind=@Settings["noGenericStarts"]>
+					<label class="form-check-label" for="genericsCheck">No generic starts (I, me, etc.)</label>
+				</div>
+				<div class="form-check form-switch ">
+					<input class="form-check-input mx-2" type="checkbox" id="infiniteCheck" @bind=@Settings["infiniteMode"]>
+					<label class="form-check-label" for="infiniteCheck">Infinite mode</label>
+				</div>
+				<div class="form-check form-switch ">
+					<input class="form-check-input mx-2" type="checkbox" id="???Check" @bind=@Settings["???"]>
+					<label class="form-check-label" for="???Check">???</label>
+				</div>
+				@*------------------------------------*@
+			</div>
 		</div>
 
+		@*---------------MIDDLE COLUMN---------------*@
 		<div class="col-6">
 			@* MAKE THIS GO INVISIBLE ONCE SEARCH BUTTON IS PRESSED *@
 			<div class="d-flex justify-content-center">
-				<span class="text-center " style="visibility: @artistSearchPrompt ;">@artistSearchPromptString</span>
+				<span class="text-center" style="visibility: @artistSearchPrompt ;">@artistSearchPromptString</span>
 			</div>
 			<br />
 
@@ -42,27 +99,28 @@
 			</div>
 
 			<br />
-			<div id="container1" class="d-flex justify-content-center">
+			<div id="SearchResultsContainer" class="d-flex justify-content-center">
 				@* TODO - make a grid instead of list *@
 				<ul>
 					@if (artistSearchSetting == "searchByArtist")
 					{
 						@foreach (Artist artist in MyArtistList)
 						{
-							<li>
-								<button @onclick="() => selectArtistButton(artist)" class="btn btn-outline-light btn-sm">Choose</button>
+							<li class="my-3">
+								<button @onclick="() => chooseButton(artist)" class="btn btn-outline-light btn-sm">Choose</button>
 								<div class ="d-inline" style="@styleForArtistList(artist.IsSelected)">
 									@artist.Name
 								</div>
 							</li>
-							<br>
 						}
 					}
 
-					@if (artistSearchSetting == "searchBySongTitle"){
-						@foreach(Recording recording in MyRecordingList){
+					@if (artistSearchSetting == "searchBySongTitle")
+					{
+						@foreach(Recording recording in MyRecordingList)
+						{
 							<li>
-								<button @onclick="() => selectSongTitleButton(recording)" class="btn btn-outline-light btn-sm">Choose</button>
+								<button @onclick="() => chooseButton(recording)" class="btn btn-outline-light btn-sm">Choose</button>
 								<div class="d-inline" style="@styleForArtistList(recording.IsSelected)">
 									@recording.title by @recording.artistcredit.First().name
 								</div>
@@ -75,31 +133,40 @@
 			</div>
 		</div>
 
+		@*---------------RIGHT COLUMN---------------*@
 		<div class="col-3" style="pointer-events: none; visibility: @rightDivVisibility">
 			@*pointer-events: none is to fix div overlapping the search button - a problem on phones*@
 			@*MAKE VISIBLE ONLY WHEN selectedArtist.Name.Size>0*@
 			<span class="d-flex justify-content-center" style="visibility: @fetchingLyricsHeading">Fetching lyrics for @myClient.NewArtistName</span>
-			<br />
-			<div id="songsFoundContainer" class = "d-flex justify-content-center">
+			
+			<div id="songsFoundContainer" class="d-flex justify-content-center my-3">
 				@if(songList.Count>0){
-				<ul>
+					<ul>
 						@foreach (SongDetails songInfo in songInfos)
-					{
-						<li>
-							@songInfo.SongName
-						</li>
-					}
-				</ul>
+						{
+							<li>
+								@songInfo.SongName
+							</li>
+						}
+					</ul>
 				}
 			</div>
 		</div>
+
 	</div>
 </div>
 
 
+
+
+
+
+
 @code {
 	string artistSearchPromptString = "Search for an artist to begin fetching song snippets";
-	[Parameter]
+	int numberOfSongsToFetch = 50;
+	int numberOfSongsSelected = 10;
+
 	public List<Artist> MyArtistList { get; set; } = new();
 	public List<Recording> MyRecordingList { get; set; } = new();
 
@@ -118,161 +185,75 @@
 
 	public string artistSearchSetting { get; set; } = "searchByArtist";
 
-	private async Task<ArtistResponse> fetchNPossibleArtists(string artistName, int N)
+	public Dictionary<string, bool> Settings = new Dictionary<string, bool>
 	{
-		//MUSICBRAINZ FETCH - gives a list of N possible artists that match the given artistName for the user to choose one
-		try
-		{
-			Console.WriteLine("Search by possible artist");
-			var httpRequestMessage = new HttpRequestMessage(HttpMethod.Get, $"https://musicbrainz.org/ws/2/artist/?query={artistName}&fmt=json");
-			var response = await httpClient.SendAsync(httpRequestMessage);
-			var returnObject = await response.Content.ReadFromJsonAsync<ArtistResponse>();
-
-			MyArtistList = returnObject.Artists.Take(N).ToList();
-			// artistList.DistinctBy((a) => a.Name);
-			return returnObject;
-		} catch (Exception e)
-		{
-			Console.WriteLine($"Could not find artist: {artistName}");
-			return new();
-		}
-	}
-	private async Task<RecordingResponse> fetchNPossibleSongTitles(string songName, int N)
-	{
-		//MUSICBRAINZ FETCH - gives a list of N possible songs that match the given songName for the user to choose one
-		try
-		{
-			Console.WriteLine("Search by possible song title");
-			var httpRequestMessage = new HttpRequestMessage(HttpMethod.Get, $"https://musicbrainz.org/ws/2/recording/?query=\"{songName}\"&fmt=json");
-			var response = await httpClient.SendAsync(httpRequestMessage);
-			var returnObject = await response.Content.ReadFromJsonAsync<RecordingResponse>();
-
-			MyRecordingList = returnObject.Recordings.Take(N).ToList();
-			// artistList.DistinctBy((a) => a.Name);
-			Console.WriteLine(returnObject.Recordings.First().artistcredit.First().name);
-			return returnObject;
-		}
-		catch (Exception e)
-		{
-			Console.WriteLine($"Could not find song: {songName} Exception: {e}");
-			return new();
-		}
-	}
+		{ "startOnly" , false},
+		{ "repeatsOnly", false },
+		{ "noGenericStarts", false },
+		{ "infiniteMode", false},
+		{ "???", false}
+	};
 
 	private async Task searchButton()
 	{
 		MyArtistList.Clear();
 		MyRecordingList.Clear();
-		Console.WriteLine(artistSearchSetting);
 		if (artistSearchSetting == "searchByArtist")
-	{
-			await fetchNPossibleArtists(userInputBandName, 10);
+		{
+			MyArtistList = await MusicbrainzAPIClient.fetchNPossibleArtists(userInputBandName, 10);
 		}
 		if (artistSearchSetting == "searchBySongTitle")
 		{
-			await fetchNPossibleSongTitles(userInputBandName, 10);
+			MyRecordingList = await MusicbrainzAPIClient.fetchNPossibleSongTitles(userInputBandName, 20);
+		}
+		foreach (var pair in Settings)
+		{
+			Console.WriteLine($"{pair.Key}: {pair.Value}");
 		}
 	}
 
 	GeniusAPIClient myClient = new();
-	List<string> songList = new List<string>();
-	List<SongDetails> songInfos = new List<SongDetails>();
+	List<string> songList = new();
+	List<SongDetails> songInfos = new();
 	public string artistId = "";
-	private async Task selectArtistButton(Artist artist)
+
+
+	private async Task chooseButton(Object input)
 	{
-		startQuizButtonVisibility = "hidden";
 		artistSearchPrompt = "hidden";
 		fetchingLyricsHeading = "visible";
 		rightDivVisibility = "visible";
 		songInfos.Clear();
-		//reset
-		selectedArtist.IsSelected = false;
-		selectedArtist = artist;
-		selectedArtist.IsSelected = true;
-		Console.WriteLine(artistSearchSetting);
-		//first get id of artist
-		if (artistSearchSetting == "searchByArtist")
+		setSongs.InvokeAsync(songInfos);
+
+		//Chose to search by song title
+		if (input is Recording recording)
 		{
-			artistId = await myClient.GetArtistIdUsingArtistName(artist.Name);
-			Console.WriteLine("Arrived at search by artist");
+			myClient.NewArtistName = recording.artistcredit[0].name;
+			artistId = await myClient.GetArtistId(recording);
+			Console.WriteLine($"ArtistID: {artistId}");
 		}
-		
-		Console.WriteLine($"ArtistID: {artistId}");
 
-
+		//Chose to search by artist
+		if (input is Artist artist)
+		{
+			myClient.NewArtistName = artist.Name;
+			selectedArtist.IsSelected = false;
+			selectedArtist = artist;
+			selectedArtist.IsSelected = true;
+			artistId = await myClient.GetArtistId(artist.Name);
+			Console.WriteLine($"ArtistID: {artistId}");
+		}
 
 		//use that id to retrieve list of X amount of songs - 50 for now
 		songList = await myClient.GetSongTitles(artistId, 50);
 
+		//print all songs to console for testing
 		foreach (string songTitle in songList)
 		{
 			Console.WriteLine(songTitle);
 		}
-		//randomise
-		songList = songList.OrderBy(_ => Guid.NewGuid()).ToList();
-		List<string> lyricSnippet = new();
-		//ID was wrong because I was using lyricSnippet.Count() - always 10. - replaced with int count below
-		int count = 0;
-		foreach(string songTitle in songList)
-		{
-			// Console.WriteLine($"{artist.Name}, {songTitle}");
-			if (artistId != "")
-			{
-				lyricSnippet = await LyricsAPIClient.FetchLyricsAsync(myClient.NewArtistName, songTitle);
-				if (lyricSnippet.Count == 10)
-				{
-					SongDetails thisSongInfo = new(count, songTitle, lyricSnippet);
-					songInfos.Add(thisSongInfo);
-					StateHasChanged();
-				}
-				if (songInfos.Count == 10)
-				{
-					await setSongs.InvokeAsync(songInfos);
-					return;
-				}
-				count++;
-			}
-		}
 
-		// return await getLyricSnippetAL(songList.FirstOrDefault());
-
-
-	}
-
-	private async Task selectSongTitleButton(Recording recording)
-	{
-		startQuizButtonVisibility = "hidden";
-		artistSearchPrompt = "hidden";
-		fetchingLyricsHeading = "visible";
-		rightDivVisibility = "visible";
-		songInfos.Clear();
-		//reset
-		// selectedArtist.IsSelected = false;
-		// selectedArtist = artist;
-		// selectedArtist.IsSelected = true;
-		Console.WriteLine(artistSearchSetting);
-		//first get id of artist
-		// if (artistSearchSetting == "searchByArtist")
-		// {
-		// 	artistId = await myClient.GetArtistIdUsingArtistName(artist.Name);
-		// 	Console.WriteLine("Arrived at search by artist");
-		// }
-		if (artistSearchSetting == "searchBySongTitle")
-		{
-			artistId = await myClient.GetArtistIdUsingSongTitle(recording);
-			Console.WriteLine("Arrived at search by song title");
-		}
-		Console.WriteLine($"ArtistID: {artistId}");
-
-
-
-		//use that id to retrieve list of X amount of songs - 50 for now
-		songList = await myClient.GetSongTitles(artistId, 50);
-
-		foreach (string songTitle in songList)
-		{
-			Console.WriteLine(songTitle);
-		}
 		//randomise
 		songList = songList.OrderBy(_ => Guid.NewGuid()).ToList();
 		List<string> lyricSnippet = new();
@@ -298,13 +279,7 @@
 				count++;
 			}
 		}
-
-		// return await getLyricSnippetAL(songList.FirstOrDefault());
-
-
 	}
-
-
 
 	private string styleForArtistList(bool isSelected)
 	{	
@@ -315,18 +290,34 @@
 		return "color:rgba(255, 255, 255, 0.87)";
 	}
 
-
-
-	//pass this to main page
 	public void resetArtistListComponent()
 	{
 		userInputBandName = "";
 		artistSearchPrompt = "visible";
+		resetLeftDiv();
+		resetRightDiv();
+	}
+
+	public void resetRightDiv()
+	{
 		fetchingLyricsHeading = "hidden";
 		rightDivVisibility = "hidden";
+		startQuizButtonVisibility = "hidden";
 		songInfos.Clear();
 		MyArtistList.Clear();
+		MyRecordingList.Clear();
 		artistId = "";
+		setSongs.InvokeAsync(songInfos);
+	}
+
+	public void resetLeftDiv()
+	{
+		foreach (var pair in Settings)
+		{
+			Settings[pair.Key] = false;
+		}
+		numberOfSongsToFetch = 50;
+		numberOfSongsSelected = 10;
 	}
 
 }
