--- a/PortfolioWebAssem/Pages/MusicQuizPage/ArtistList.razor
+++ b/PortfolioWebAssem/Pages/MusicQuizPage/ArtistList.razor
@@ -9,7 +9,7 @@
 	<div class="row">
 
 		@*---------------LEFT COLUMN---------------*@
-		<div class="col-3 d-flex flex-column align-items-center">
+		<div class="col-4 d-flex flex-column align-items-center">
 
 			@*----------SEARCH BY----------*@
 			<div class="d-block text-center">
@@ -53,31 +53,40 @@
 
 			<style>
 				.form-switch label{
-					display: inline-block;
-					width: 220px;
+					display: flex;
+					width: auto;
+					white-space:normal;
+					align-items: center;
+				}
+				.form-switch {
+					padding: 0;
+				}
+
+				.form-check-input {
+					width: 0;
 				}
 			</style>
 			@*----------SETTINGS----------*@
 			<div class="d-block justify-content-center">
 
 				<div class="form-check form-switch ">
-					<input class="form-check-input mx-2" type="checkbox" id="startOnly" @bind=@Settings["startOnly"]>
+					<input class="form-check-input" style="margin-left: 25px; margin-right: 5px" type="checkbox" id="startOnly" @bind=@Settings["startOnly"]>
 					<label class="form-check-label" for="startOnly">Starting lines only</label>
 				</div>
 				<div class="form-check form-switch ">
-					<input class="form-check-input mx-2" type="checkbox" id="repeatsCheck" @bind=@Settings["repeatsOnly"]>
+					<input class="form-check-input " style="margin-left: 25px; margin-right: 5px" type="checkbox" id="repeatsCheck" @bind=@Settings["repeatsOnly"]>
 					<label class="form-check-label" for="repeatsCheck">Most repeated lines only</label>
 				</div>
 				<div class="form-check form-switch ">
-					<input class="form-check-input mx-2" type="checkbox" id="genericsCheck" @bind=@Settings["noGenericStarts"]>
+					<input class="form-check-input " style="margin-left: 25px; margin-right: 5px" type="checkbox" id="genericsCheck" @bind=@Settings["noGenericStarts"]>
 					<label class="form-check-label" for="genericsCheck">No generic starts (I, me, etc.)</label>
 				</div>
 				<div class="form-check form-switch ">
-					<input class="form-check-input mx-2" type="checkbox" id="infiniteCheck" @bind=@Settings["infiniteMode"]>
+					<input class="form-check-input " style="margin-left: 25px; margin-right: 5px" type="checkbox" id="infiniteCheck" @bind=@Settings["infiniteMode"]>
 					<label class="form-check-label" for="infiniteCheck">Infinite mode</label>
 				</div>
 				<div class="form-check form-switch ">
-					<input class="form-check-input mx-2" type="checkbox" id="???Check" @bind=@Settings["???"]>
+					<input class="form-check-input " style="margin-left: 25px; margin-right: 5px" type="checkbox" id="???Check" @bind=@Settings["???"]>
 					<label class="form-check-label" for="???Check">???</label>
 				</div>
 				@*------------------------------------*@
@@ -85,7 +94,7 @@
 		</div>
 
 		@*---------------MIDDLE COLUMN---------------*@
-		<div class="col-6">
+		<div class="col-4">
 			@* MAKE THIS GO INVISIBLE ONCE SEARCH BUTTON IS PRESSED *@
 			<div class="d-flex justify-content-center">
 				<span class="text-center" style="visibility: @artistSearchPrompt ;">@artistSearchPromptString</span>
@@ -94,8 +103,10 @@
 
 			<div class="d-flex justify-content-center">
 				<br />
-				<input @bind="userInputBandName" />
+				@* <form @onsubmit="searchButton"> *@
+				<input @bind="userInputBandName"  />
 				<button @onclick="searchButton" class="btn btn-outline-light btn-sm">Search</button>
+				@* </form> *@
 			</div>
 
 			<br />
@@ -134,7 +145,7 @@
 		</div>
 
 		@*---------------RIGHT COLUMN---------------*@
-		<div class="col-3" style="pointer-events: none; visibility: @rightDivVisibility">
+		<div class="col-4" style="pointer-events: none; visibility: @rightDivVisibility">
 			@*pointer-events: none is to fix div overlapping the search button - a problem on phones*@
 			@*MAKE VISIBLE ONLY WHEN selectedArtist.Name.Size>0*@
 			<span class="d-flex justify-content-center" style="visibility: @fetchingLyricsHeading">Fetching lyrics for @myClient.NewArtistName</span>
@@ -321,3 +332,4 @@
 	}
 
 }
+
